--- a/bl2d.env
+++ b/bl2d.env
@@ -3,10 +3,7 @@ geom   0
 adapt  0
 element  p1
 file_h  0
-
+hmin   2 
 adapt   1 
+hmin   2 
 adapt   1 
-adapt   2 
-adapt   3 
-adapt   4 
-adapt   5 
